--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <svg width="750" height="700"></svg>
     <script src="http://d3js.org/d3.v5.min.js"></script>
+    <script type="module" src="js/config.js"></script>
     <script type="module" src="js/ui.js"></script>
     <script type="module" src="js/transport.js"></script>
     <script type="module" src="js/app.js"></script>
