--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>SF Muni Transport</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>SF Muni Transport</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-    <h2>San Francisco Muni Transport Map</h2>
+  <h2>San Francisco Muni Transport Map</h2>
+  <div class="svg-container">
     <div class="route-selector">
-        <label for="route">Select a route to watch:</label>
-        <select id="route">
-            <option value="">all</option>
-        </select>
+      <label for="route">Select a route to watch:</label>
+      <select id="route">
+        <option value="">all</option>
+      </select>
     </div>
     <svg width="750" height="700"></svg>
-    <script src="http://d3js.org/d3.v5.min.js"></script>
-    <script type="module" src="js/config.js"></script>
-    <script type="module" src="js/utils.js"></script>
-    <script type="module" src="js/ui.js"></script>
-    <script type="module" src="js/transport.js"></script>
-    <script type="module" src="js/app.js"></script>
+  </div>
+  <div id="map-legend" class="map-legend hidden">
+    <table>
+      <thead>
+        <th>color</th>
+        <th>route</th>
+        <th>color</th>
+        <th>route</th>
+      </thead>
+      <tbody id="colors-list">
+      </tbody>
+    </table>
+  </div>
+  <script src="http://d3js.org/d3.v5.min.js"></script>
+  <script type="module" src="js/config.js"></script>
+  <script type="module" src="js/utils.js"></script>
+  <script type="module" src="js/ui.js"></script>
+  <script type="module" src="js/transport.js"></script>
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
