--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
   <!-- scripts - libs -->
   <script src="http://d3js.org/d3.v5.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   <!-- scripts - modules -->
   <script type="module" src="js/config.js"></script>
   <script type="module" src="js/utils.js"></script>
