Adding keys to React components

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="route-selector">
         <label for="route">Select a route to watch:</label>
         <select id="route">
-          <option value="">all</option>
+          <option value="" key="key-777">all</option>
         </select>
       </div>
     </div>
